# tensorflow-cmake

./: .clang-format  .drone.script  .drone.yml  .gitignore  README.md  _README.md  setup.cfg
.ci/: build.sh  tensorflow_config.example.txt
.github/ISSUE_TEMPLATE/: 00-bug-issue.md  bug_report.md
c/: CMakeLists.txt  configure.py  inference_c.c
cc/: inference_cc.cc
cmake/modules/: FindTENSORFLOW.cmake  FindTensorFlow.cmake
custom_op/: README.md  example.py  setup.cfg
custom_op/user_ops/: .gitignore  CMakeLists.txt  __init__.py  configure.py  test_matrix_add.py
custom_op/user_ops/kernels/: matrix_add_kernel.cc  matrix_add_kernel.cu  matrix_add_kernel_gpu.cu.cc  matrix_add_op.cc  matrix_add_op.h
custom_op/user_ops/ops/: matrix_add.cc
dockerfiles/: Dockerfile.tensorflow-dependencies  Dockerfile.tensorflow-go  Dockerfile.tensorflow-opencv  Dockerfile.tensorflow-plain  Makefile  README.sh  tensorflow-cmake-1.13.1-devel.Dockerfile  tensorflow-cmake-1.14.0-devel.Dockerfile
example/: CMakeLists.txt
examples/event_writer/: CMakeLists.txt  README.md  write_events.cpp
examples/keras/: CMakeLists.txt  README.md  inference.cpp  keras_graph.py
examples/resize/: CMakeLists.txt  opencv_version.cc  prepare.py  tensorflow_version.cc
examples/simple/: CMakeLists.txt  example.cc  prepare.py
inference/: example.py
inference/c/: CMakeLists.txt  inference_c.c
inference/cc/: CMakeLists.txt  inference_cc.cc
inference/examples/: example.cc
inference/go/: build.sh  inference_go.go
inference/python/: inference.py  inference2.py
serving/: README.md
serving/basic/client/: client.sh
serving/basic_classify/client/: client_grpc.py
serving/basic_image/server/: run.sh
serving/basic_image/training/: create.py
serving/client/python/: client_rest.py
serving/image/client/: client_grpc.py  client_rest.py  client_rest.sh
serving/server/tensorflow-serving/: run.sh
serving/training/: create.py
