cmake_minimum_required( VERSION 2.8 )

project( TFCustomOp )

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../cmake/modules)
find_package(TENSORFLOW 1.9 EXACT REQUIRED)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=${TensorFlow_ABI}")
set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=${TensorFlow_ABI}" )

TENSORFLOW_REQUIRE_C_LIBRARY()
TENSORFLOW_REQUIRE_SOURCE()

INCLUDE_DIRECTORIES($ENV{TENSORFLOW_BUILD_DIR}/includes/)
add_executable (example example.cc)
TARGET_INCLUDE_DIRECTORIES(example PRIVATE TENSORFLOW_DEP)
TARGET_LINK_LIBRARIES(example PRIVATE TENSORFLOW_DEP)
