cmake_minimum_required( VERSION 2.8 )

project( TFCustomOp )

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../cmake/modules)
find_package(TENSORFLOW 1.9 EXACT REQUIRED)

TENSORFLOW_REQUIRE_C_LIBRARY()
TENSORFLOW_REQUIRE_SOURCE()

ADD_EXECUTABLE (inference_c inference_c.c)
# no need for ${TENSORFLOW_INCLUDE_DIR} from pip
TARGET_INCLUDE_DIRECTORIES(inference_c PRIVATE ${TENSORFLOW_SOURCE_DIR})
TARGET_LINK_LIBRARIES(inference_c PRIVATE TENSORFLOW_DEP)
